--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.DS.Store
+VideoStore/.vs/
 VideoStore/VideoStore.Test/bin/
 VideoStore/VideoStore.Test/obj/
 
 VideoStore/VideoStore/bin/
 VideoStore/VideoStore/obj/
+
